[gd_scene load_steps=23 format=2]

[ext_resource path="res://FirstApp/Destroyer.png" type="Texture" id=1]
[ext_resource path="res://DestroyerImplementation/Destroyerlevel2.gd" type="Script" id=2]
[ext_resource path="res://FirstApp/explosion/8.png" type="Texture" id=3]
[ext_resource path="res://FirstApp/explosion/9.png" type="Texture" id=4]
[ext_resource path="res://FirstApp/explosion/13.png" type="Texture" id=5]
[ext_resource path="res://FirstApp/explosion/6.png" type="Texture" id=6]
[ext_resource path="res://FirstApp/explosion/4.png" type="Texture" id=7]
[ext_resource path="res://FirstApp/explosion/2.png" type="Texture" id=8]
[ext_resource path="res://FirstApp/explosion/14.png" type="Texture" id=9]
[ext_resource path="res://FirstApp/explosion/15.png" type="Texture" id=10]
[ext_resource path="res://FirstApp/explosion/1.png" type="Texture" id=11]
[ext_resource path="res://FirstApp/explosion/10.png" type="Texture" id=12]
[ext_resource path="res://FirstApp/explosion/5.png" type="Texture" id=13]
[ext_resource path="res://FirstApp/explosion/11.png" type="Texture" id=14]
[ext_resource path="res://FirstApp/explosion/7.png" type="Texture" id=15]
[ext_resource path="res://FirstApp/explosion/12.png" type="Texture" id=16]
[ext_resource path="res://FirstApp/explosion/16.png" type="Texture" id=17]
[ext_resource path="res://FirstApp/explosion/3.png" type="Texture" id=18]
[ext_resource path="res://sounds/explosions.wav" type="AudioStream" id=19]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ) ],
"loop": false,
"name": "move",
"speed": 5.0
}, {
"frames": [ ExtResource( 11 ), ExtResource( 8 ), ExtResource( 18 ), ExtResource( 7 ), ExtResource( 13 ), ExtResource( 6 ), ExtResource( 15 ), ExtResource( 4 ), ExtResource( 3 ), ExtResource( 12 ), ExtResource( 14 ), ExtResource( 16 ), ExtResource( 5 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 17 ) ],
"loop": true,
"name": "explosions",
"speed": 24.0
} ]

[sub_resource type="CircleShape2D" id=2]
radius = 36.3288

[sub_resource type="CircleShape2D" id=3]
radius = 25.4533

[node name="Destroyer" type="KinematicBody2D"]
show_behind_parent = true
script = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 16.125, 6.875 )
scale = Vector2( 2.57031, 2.11719 )
frames = SubResource( 1 )
animation = "move"
__meta__ = {
"_edit_group_": true
}

[node name="Timer" type="Timer" parent="."]
wait_time = 0.65

[node name="Explosions" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 19 )
bus = "Efects"

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 25.539, 8.22694 )
shape = SubResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 25.539, 8.22694 )
shape = SubResource( 3 )

[node name="Position2D" type="Position2D" parent="."]
position = Vector2( -12.2106, 22.9453 )

[node name="Fier" type="Timer" parent="."]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="timeout" from="Fier" to="." method="_on_Fier_timeout"]
